--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #E6E8E6;
+    overflow-y: scroll;
 }
 .header, .footer{
     width: 60%;
@@ -13,12 +14,12 @@ body{
 }
 .header{
     font-family: 'Roboto', sans-serif;
-    color: #FE6D73;
     margin-top: 30px;
     padding-left: 10px;
     margin-bottom: 60px;
 }
 .header h1 {
+    color: #FE6D73;
     font-size: 36pt;
 }
 .header h3{
@@ -27,7 +28,7 @@ body{
 }
 .navbar {
     width: 60%;
-    background-color: #555;
+    background-color: rgb(110, 110, 110);
     overflow: none;
     margin-left: auto;
     margin-right: auto;
@@ -38,9 +39,10 @@ body{
   .navbar a {
     float: left;
     padding: 12px;
-    color: white;
+    color: #00ff88;
     text-decoration: none;
     font-size: 17px;
+    font-weight: bold;
     width: 100%;
     text-align: center;
   }
@@ -50,7 +52,7 @@ body{
   }
   
   .navbar a.active {
-    background-color: #04AA6D;
+    background-color: #24d71e;
   }
   .video-link{
     display: none;
@@ -97,13 +99,12 @@ body{
     margin-right: auto;
     margin-top: 10px;
     margin-bottom: 40px;
-    border: #7c90a0 2px solid;
 }
 .slide{
-    width: 90%;
+    width: 100%;
     margin: 10px auto;
-    padding-bottom: 10px;
-    border-bottom: #7c90a0 2px solid;
+    padding-top: 20px;
+    padding-bottom: 100px;
 }
 .slide h2{
     color:#FE6D73;
@@ -173,6 +174,7 @@ ul{
     width: 100%;
     height: 100%;
 }
+
 .right{
     float: right;
     padding-left: 20px;
@@ -181,8 +183,12 @@ ul{
 #one{
     height: 270px;
 }
-#one img{
+#Five img{
     max-width: 300px !important;
     width: 300px !important;
+    max-height: 300px !important;
+}
+#Two , #Three, #Four, #Five, #Six{
+    display: none;
 }
 }
